--- a/.github/workflows/ci_unit_tests.yml
+++ b/.github/workflows/ci_unit_tests.yml
@@ -7,7 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: 1.16.x
+        go-version: 1.16.3
         packages: 
           - ./bfsDfs
           - ./concatenate
