--- a/.github/workflows/ci_unit_tests.yml
+++ b/.github/workflows/ci_unit_tests.yml
@@ -7,8 +7,7 @@ jobs:
   test:
     strategy:
       matrix:
-        go-version: '1.16.x'
-        packages: 
+        package: 
           - ./bfsDfs
           - ./concatenate
           - ./reformat
@@ -22,9 +21,9 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: ${{ matrix.go-version }}
+        go-version: '1.16.x'
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Smoke test
       run: | 
-        go test ${{matrix.packages}} -v
+        go test ${{matrix.package}} -v
