--- a/.github/workflows/ci_unit_tests.yml
+++ b/.github/workflows/ci_unit_tests.yml
@@ -7,11 +7,12 @@ jobs:
   test:
     strategy:
       matrix:
-        package: 
-          - ./bfsDfs
-          - ./concatenate
-          - ./reformat
-          - ./substring
+        # package: 
+        #   - ./bfsDfs
+        #   - ./concatenate
+        #   - ./reformat
+        #   - ./substring
+        #   - ./... --ignore=./substring ./reformat 
         os: 
           - ubuntu-latest
           - macos-latest
@@ -26,4 +27,4 @@ jobs:
       uses: actions/checkout@v2
     - name: Smoke test
       run: | 
-        go test ${{matrix.package}} -v
+        go test ./... -v
